--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,15 @@
-include.path=${php.global.include.path}
+code.analysis.excludes=
+file.reference.vendor-laravel=vendor/laravel
+file.reference.vendor-mockery=vendor/mockery
+file.reference.vendor-phpunit=vendor/phpunit
+file.reference.vendor-symfony=vendor/symfony
+ignore.path=\
+    ${file.reference.vendor-laravel}:\
+    ${file.reference.vendor-mockery}:\
+    ${file.reference.vendor-phpunit}:\
+    ${file.reference.vendor-symfony}
+include.path=\
+    ${php.global.include.path}
 php.version=PHP_70
 source.encoding=UTF-8
 src.dir=.
