--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,5 @@
 code.analysis.excludes=
+file.reference.vendor-components=vendor/components
 file.reference.vendor-laravel=vendor/laravel
 file.reference.vendor-mockery=vendor/mockery
 file.reference.vendor-phpunit=vendor/phpunit
@@ -7,7 +8,8 @@ ignore.path=\
     ${file.reference.vendor-laravel}:\
     ${file.reference.vendor-mockery}:\
     ${file.reference.vendor-phpunit}:\
-    ${file.reference.vendor-symfony}
+    ${file.reference.vendor-symfony}:\
+    ${file.reference.vendor-components}
 include.path=\
     ${php.global.include.path}
 php.version=PHP_70
