--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.4.0",
+        "odannyc/laravel-alertify": "^1.0",
         "oriceon/toastr-5-laravel": "@dev",
         "secondtruth/startmin": "^1.0"
     },
