--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,6 +2,7 @@ code.analysis.excludes=
 file.reference.vendor-components=vendor/components
 file.reference.vendor-laravel=vendor/laravel
 file.reference.vendor-mockery=vendor/mockery
+file.reference.vendor-odannyc=vendor/odannyc
 file.reference.vendor-phpunit=vendor/phpunit
 file.reference.vendor-symfony=vendor/symfony
 ignore.path=\
@@ -9,7 +10,8 @@ ignore.path=\
     ${file.reference.vendor-mockery}:\
     ${file.reference.vendor-phpunit}:\
     ${file.reference.vendor-symfony}:\
-    ${file.reference.vendor-components}
+    ${file.reference.vendor-components}:\
+    ${file.reference.vendor-odannyc}
 include.path=\
     ${php.global.include.path}
 php.version=PHP_70
