--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
+        "matthiasmullie/minify": "^1.3",
         "odannyc/laravel-alertify": "^1.0",
         "oriceon/toastr-5-laravel": "@dev",
         "secondtruth/startmin": "^1.0"
