--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,9 @@
         "post-create-project-cmd": [
             "php artisan key:generate"
         ],
+        "database": [
+            "@php artisan migrate:refresh --seed"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "php artisan package:discover"
